# aetherflow-traffic

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  api_demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/contracts/: hardhat.config.js  package.json
backend/contracts/scripts/: deploy.js
backend/contracts/solidity/: AIAgentRegistry.sol  AetherFlowContractFactory.sol  AetherToken.sol  CongestionDerivatives.sol  TrafficNFT.sol
backend/monitoring/: prometheus.yml
backend/monitoring/grafana/provisioning/dashboards/: aetherflow-dashboard.json  dashboard.yml
backend/monitoring/prometheus/: prometheus.yml
backend/nginx/: nginx.conf
backend/scripts/: README.md  background_worker.py  deploy.py  dev_server.py  make_executable.sh  migrate_data.py  monitor.py  run_tests.py  setup_database.py
backend/src/aetherflow/: __init__.py  main.py
backend/src/aetherflow/ai/: __init__.py  data_validator.py  federated_learning.py  groq_client.py  traffic_optimizer.py
backend/src/aetherflow/api/v1/: router.py
backend/src/aetherflow/core/: config.py  database.py  logging.py
backend/src/aetherflow/hcs10/: agent_registry.py
backend/src/aetherflow/hedera/: client.py
backend/src/aetherflow/models/: __init__.py  ai_agents.py  derivatives.py  traffic_lights.py  traffic_nfts.py  user_accounts.py  vehicle_data.py
backend/src/aetherflow/services/: __init__.py  agent_service.py  tokenomics_service.py  traffic_service.py  vehicle_service.py
backend/src/aetherflow/utils/: __init__.py  crypto_utils.py  geospatial_utils.py  time_utils.py  validation_utils.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_integration.py
backend/tests/unit/: test_vehicle_data.py
components/: network-visualization.tsx  (+2 more)
(+25 files in other folders)
